--- a/css/main.css
+++ b/css/main.css
@@ -10,10 +10,15 @@
    Base styles: opinionated defaults
    ========================================================================== */
 
+   /*font-family: 'Dosis', sans-serif;
+font-family: 'Raleway', sans-serif;*/
+
 html {
     color: #222;
     font-size: 1em;
     line-height: 1.4;
+    font-family: 'Dosis', sans-serif;
+    font-weight: 700;
 }
 
 /*
@@ -33,6 +38,64 @@ html {
     background: #b3d4fc;
     text-shadow: none;
 }
+
+
+@font-face {
+    font-family: 'stranger_back_in_the_nightRg';
+    src: url('fonts/stranger/stranger_back_in_the_night-webfont.woff2') format('woff2'),
+         url('fonts/stranger/stranger_back_in_the_night-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'aprendiendoandoicon';
+  src:  url('fonts/aprendiendoando/aprendiendoandoicon.eot?bm82eu');
+  src:  url('fonts/aprendiendoando/aprendiendoandoicon.eot?bm82eu#iefix') format('embedded-opentype'),
+    url('fonts/aprendiendoando/aprendiendoandoicon.ttf?bm82eu') format('truetype'),
+    url('fonts/aprendiendoando/aprendiendoandoicon.woff?bm82eu') format('woff'),
+    url('fonts/aprendiendoando/aprendiendoandoicon.svg?bm82eu#aprendiendoandoicon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="aprendiendoando-"], [class*=" aprendiendoando-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'aprendiendoandoicon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.aprendiendoando-correo:before {
+  content: "\e900";
+}
+.aprendiendoando-facebook:before {
+  content: "\e901";
+}
+.aprendiendoando-rss:before {
+  content: "\e902";
+}
+.aprendiendoando-twitter:before {
+  content: "\e903";
+}
+.aprendiendoando-youtube:before {
+  content: "\e904";
+}
+
+.amarillo{
+    color:yellow;
+}
+
+
 
 /*
  * A better looking default horizontal rule
