--- a/css/main.css
+++ b/css/main.css
@@ -168,6 +168,33 @@ textarea {
     padding: 0;
 }
 
+.overlay{
+    position: absolute;
+    background-color:rgba(0, 0, 0, 0.3);
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0; 
+}
+
+
+/*
+ * Botones
+ */
+
+ .button{
+     border-radius: 10px;
+     font-family: 'Dosis';
+     text-decoration: none;
+     color: #fff;
+     padding:0.5rem 1rem;
+     margin:1rem 0;
+     display: inline-block;
+ }
+
+    .button--main{
+        background-color: #FF5253;
+    }
 
 
 .decoration-none{
@@ -218,6 +245,51 @@ textarea {
     .nav__main a.active{
         font-weight: 800;
     }
+
+.main{
+    margin:1rem 0;
+}
+
+.slider{
+    background-image: url("../img/startup.jpg");
+    padding:8rem 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    color:#fff;
+    position: relative;
+}
+
+    .slider__information{
+        z-index: 1;
+        position: relative;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .slider__left{
+        max-width: 500px;
+    }
+
+.title{
+    font-family: 'Dosis',Cambria, Cochin, Georgia, Times, Times New Roman, serif;
+    margin:0.5rem 0;
+}
+
+    .title--big{
+        font-weight: 600;
+        font-size: 4rem;
+        text-transform: uppercase;
+        line-height: 1.3;
+    }
+
+    .title--small{
+        font-weight: 400;
+        font-size: 1.5rem;
+    }
+
+
 
 
 
