--- a/css/main.css
+++ b/css/main.css
@@ -19,10 +19,7 @@ html {
     line-height: 1.4;
     font-family: 'Dosis', sans-serif;
     font-weight: 700;
-    
 }
-
-
 
 /*
  * Remove text-shadow in selection highlight:
@@ -171,25 +168,33 @@ textarea {
     padding: 0;
 }
 
+.overlay{
+    position: absolute;
+    background-color:rgba(0, 0, 0, 0.3);
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0; 
+}
+
+
 /*
  * Botones
  */
 
-.button{
-    border-radius: 10px;
-    font-family: 'Dosis';
-    font-weight: 400;
-    text-decoration: none;
-    color:#fff;
-    padding:0.5rem 1rem;
-    margin:1rem 0;
-    display: inline-block;
-}
+ .button{
+     border-radius: 10px;
+     font-family: 'Dosis';
+     text-decoration: none;
+     color: #fff;
+     padding:0.5rem 1rem;
+     margin:1rem 0;
+     display: inline-block;  
+ }
 
     .button--main{
         background-color: #FF5253;
     }
-
 
 
 .decoration-none{
@@ -247,11 +252,11 @@ textarea {
 
 .slider{
     background-image: url("../img/startup.jpg");
-    padding: 8em 0;
+    padding:8rem 0;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: bottom;
-    color: #fff;
+    background-position: center;
+    color:#fff;
     position: relative;
 }
 
@@ -264,19 +269,8 @@ textarea {
     }
 
     .slider__left{
-        width:500px;
         max-width: 500px;
     }
-
-.overlay{
-    position: absolute;
-    top:0;
-    bottom:0;
-    left: 0;
-    right: 0;
-    background-color: rgba(0,0,0,0.5);
-}
-
 
 .title{
     font-family: 'Dosis',Cambria, Cochin, Georgia, Times, Times New Roman, serif;
@@ -285,16 +279,32 @@ textarea {
 
     .title--big{
         font-weight: 600;
-        text-transform: uppercase;
         font-size: 4rem;
+        text-transform: uppercase;
         line-height: 1.3;
     }
 
     .title--small{
         font-weight: 400;
-        font-size:1.5rem;
+        font-size: 1.5rem;
     }
-        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
