Finalizamos la Clase 11

--- a/css/main.css
+++ b/css/main.css
@@ -14,11 +14,11 @@
 font-family: 'Raleway', sans-serif;*/
 
 html {
-    color: #222;
+    color: #4D4D4D;
     font-size: 1em;
     line-height: 1.4;
     font-family: 'Dosis', sans-serif;
-    font-weight: 700;
+    font-weight: 400;
 }
 
 /*
@@ -288,6 +288,43 @@ textarea {
         font-weight: 400;
         font-size: 1.5rem;
     }
+
+.youtube-analytics{
+    background-color: #F9F9F9;
+    padding: 5rem 0;
+}
+
+.youtube-analytics__date{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+}
+
+.youtube-analytics__information{
+    text-align: center;
+    max-width: 70%;
+    width: 100%;
+    margin-left:auto;
+    margin-right:auto;
+    font-size: 1.6rem;
+    
+    
+}
+
+.youtube-analytics__number span{
+    color: #FF5253;
+    display:block;
+    font-size:4.5rem;
+    
+}
+
+.youtube-analytics__number strong{
+    color: #0071BC;
+    display:block;
+    font-size:2rem;
+    font-weight: 500;
+}
 
 
 
