--- a/css/main.css
+++ b/css/main.css
@@ -223,6 +223,22 @@ textarea {
     left: 0; 
 }
 
+.img-responsive{
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+}
+
+.sin-margin{
+    margin: 0;
+    padding: 0;
+}
+
+.decoration-none{
+    text-decoration: none;
+    color: #4D4D4D;
+}
+
 
 /*
  * Botones
@@ -277,6 +293,96 @@ textarea {
         padding: 1rem 0;
     }
 
+
+
+.list-courses{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+    .list-courses__item{
+        max-width: 350px;
+        border:1px solid #D2D2D2;
+        border-radius: 10px;
+        overflow: hidden;
+        margin: 1.25rem 0;
+        -moz-box-shadow: 1px 1px 3px #D2D2D2;
+        -webkit-box-shadow: 1px 1px 3px #D2D2D2;
+        box-shadow: 1px 1px 3px #D2D2D2;
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
+    }
+
+        .list-courses__item:hover{
+           -moz-box-shadow: 2px 2px 5px #ADADAD;
+            -webkit-box-shadow: 2px 2px 5px #ADADAD;
+            box-shadow: 2px 2px 5px #ADADAD;
+        }
+
+    .list-courses__information{
+        padding: 1rem;
+    }
+
+        .list-courses__information h3{
+            font-weight: 500;
+            font-size:1.5rem;
+            
+        }
+
+         .list-courses__information p{
+            font-size:1.1rem;
+            border-bottom:1px solid #CDCDCD;
+            padding-bottom: 0.5rem;
+            
+        }
+    
+    .list-courses__author{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0 1rem 1rem;
+        font-family: 'Raleway', sans-serif;
+    }
+
+        
+
+    .list-courses__author figure a{
+        display: flex;
+        align-items: center;
+        font-weight: 500;
+        font-style: italic;
+    }
+
+    .list-courses__author figure img{
+        max-width: 30%;
+        margin-right: 0.5rem;
+    }
+
+    .list-courses__author div a{
+        font-weight: 400;
+        display: block;
+    }
+
+        
+
+
+.price{
+    text-align: center;
+    padding: 0.5rem 0;
+    color:#fff;
+    font-weight: 600;
+    font-size: 1.5rem;
+}
+
+    .price--free{
+        background-color: #FF5253;
+    }
+
+    .price--premiun{
+         background-color: #6CC8BD;
+    }
 
 .nav__main li{
     margin:0 0.8rem;
