--- a/css/main.css
+++ b/css/main.css
@@ -123,7 +123,7 @@ video {
 fieldset {
     border: 0;
     margin: 0;
-    padding: 0; 
+    padding: 0;
 }
 
 /*
@@ -161,14 +161,15 @@ textarea {
     padding-left: 15px;
     padding-right: 15px;
 }
+
     .box--center{
         max-width: 1000px;
     }
 
     .box__courses{
-        color:#fff;
         display: flex;
         justify-content: space-around;
+        color:#fff;
         padding: 5rem 0;
         
     }
@@ -208,6 +209,9 @@ textarea {
         background-color: #566270;
     }
 
+    
+
+
 .list-none{
     list-style-type: none;
     margin:0;
@@ -234,13 +238,14 @@ textarea {
     padding: 0;
 }
 
+.text-center{
+    text-align: center;
+    display: block;
+}
+
 .decoration-none{
     text-decoration: none;
     color: #4D4D4D;
-}
-
-.text-center{
-        text-align: center;
 }
 
 
@@ -256,7 +261,7 @@ textarea {
      padding:0.5rem 1rem;
      margin:1rem 0;
      display: inline-block;
-     border:0; 
+     border: 0;
  }
 
     .button--main{
@@ -267,6 +272,23 @@ textarea {
 .decoration-none{
      text-decoration: none;
 }
+
+.footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem 0;
+    color: #4D4D4D;
+}
+
+    .footer a{
+        color:#4D4D4D;
+        font-size: 1.2rem;
+    }
+
+    .footer__mail{
+        margin:0 0 1rem 0;
+    }
 
 .header{
     font-family: 'Relaway' , Arial, Helvetica, sans-serif;
@@ -370,9 +392,6 @@ textarea {
         display: block;
     }
 
-        
-
-
 .price{
     text-align: center;
     padding: 0.5rem 0;
@@ -389,62 +408,10 @@ textarea {
          background-color: #6CC8BD;
     }
 
-.register{
-    background-color:#566270;
-    color: #fff;
-}
-
-    .register .box{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 5rem 0;
-    }
-
-    .register__testimonial{
-        width: 40%;
-    }
-
-    .register__newsletter{
-        width: 25%;
-    }
-
-    .register__testimonial strong{
-        font-size: 2.2rem;
-        font-weight: 600;
-    }
-
-    .register__newsletter{
-        border:1px solid #fff;
-        border-radius: 10px;
-        padding: 1rem;
-        
-    }
-
-        .register__newsletter h4{
-            font-size: 400;
-            font-size: 1.6rem;
-            text-align: center;
-        }
-
-        .register__newsletter form{
-            text-align: center;
-            
-        }
-
-        .register__newsletter form input[type="text"]{
-            display: block;
-            width: 100%;
-            text-align: center;
-            border-radius:5px;
-            border:0;
-            padding:0.5rem;
-            box-sizing: border-box;
-        }
-
 .nav__main li{
     margin:0 0.8rem;
 }
+
 
 .nav__main a{
     color: #4D4D4D;
@@ -498,6 +465,63 @@ textarea {
         font-size: 1.5rem;
     }
 
+.register{
+    background-color: #566270;
+    color: #fff;
+}
+
+    .register .box{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 5rem 0;
+    }
+
+    .register__testimonial{
+        max-width:40%;
+    }
+
+        .register__testimonial strong{
+            font-size: 2.2rem;
+            font-weight: 600;
+        }
+
+        .register__user{
+            display: flex;
+            align-items: center;
+            margin: 1rem 0;
+        }
+
+        .register__information{
+            margin-left:1rem;
+            border-bottom:1px solid #fff;
+            padding-bottom:1rem;
+        }
+
+    .register__newsletter{
+       max-width:25%;
+       border:1px solid #fff;
+       border-radius:10px;
+       padding: 3rem 1rem;
+    }
+
+        .register__newsletter strong{
+            text-align: center;
+            font-size: 1.6rem;
+            font-weight: 400;
+            display: block;
+        }
+
+        .register__newsletter input[type="text"]{
+            display: block;
+            width: 100%;
+            text-align: center;
+            border-radius: 5px;
+            border:0;
+            padding:0.5rem;
+            box-sizing: border-box;
+        }
+
 .youtube-analytics{
     background-color: #F9F9F9;
     padding: 5rem 0;
@@ -534,6 +558,7 @@ textarea {
     font-size:2rem;
     font-weight: 500;
 }
+
 
 /* ==========================================================================
    Helper classes
