--- a/css/main.css
+++ b/css/main.css
@@ -86,8 +86,6 @@ html {
     color:yellow;
 }
 
-
-
 /*
  * A better looking default horizontal rule
  */
@@ -124,6 +122,7 @@ fieldset {
     border: 0;
     margin: 0;
     padding: 0;
+   
 }
 
 /*
@@ -268,10 +267,26 @@ textarea {
         background-color: #FF5253;
     }
 
-
 .decoration-none{
      text-decoration: none;
 }
+
+.footer{
+    display: flex;
+    align-items: center;
+    padding: 2rem 0;
+    color:#4D4D4D;
+    flex-direction: column;
+}
+
+    .footer a{
+        color:#4D4D4D;
+        font-size: 1.2rem;
+    }
+
+    .footer__mail{
+        margin-bottom: 1rem;
+    }
 
 .header{
     font-family: 'Relaway' , Arial, Helvetica, sans-serif;
@@ -374,9 +389,6 @@ textarea {
         font-weight: 400;
         display: block;
     }
-
-        
-
 
 .price{
     text-align: center;
@@ -540,6 +552,8 @@ textarea {
     font-size:4.5rem;
     
 }
+
+
 
 .youtube-analytics__number strong{
     color: #0071BC;
